// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LeftPanelLiveShareWarning /> when user has live location monitor renders correctly when minimized 1`] = `
<DocumentFragment>
  <div
    class="mx_AccessibleButton mx_LeftPanelLiveShareWarning mx_LeftPanelLiveShareWarning__minimized"
    role="button"
    tabindex="0"
    title="You are sharing your live location"
  >
    <div
      height="10"
    />
  </div>
</DocumentFragment>
`;

exports[`<LeftPanelLiveShareWarning /> when user has live location monitor renders correctly when not minimized 1`] = `
<DocumentFragment>
  <div
    class="mx_AccessibleButton mx_LeftPanelLiveShareWarning"
    role="button"
    tabindex="0"
  >
    You are sharing your live location
  </div>
</DocumentFragment>
`;

exports[`<LeftPanelLiveShareWarning /> when user has live location monitor renders location publish error 1`] = `
<DocumentFragment>
  <div
    class="mx_AccessibleButton mx_LeftPanelLiveShareWarning mx_LeftPanelLiveShareWarning__error"
    role="button"
    tabindex="0"
  >
    An error occurred whilst sharing your live location
  </div>
</DocumentFragment>
`;
